# google-cloud-java

./: .bash_history  .bazeliskrc  .bazelrc  .checkstyle  .classpath  .dockerignore  .eclipse-pmd  .git_commit_msg  .gitignore  .gitmodules  .project  .readme-partials.yaml  .release-please-manifest.json  .repo-metadata.json  .tool-versions  .travis.yml  404.html  ADDING_NEW_CLIENTS.md  AGENTS.md  APPENGINE.md  Api.IOS  BUILD.bazel  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  RELEASING.md  RobustaSettings.xml  SUPPORTING_NEW_SERVICES.md  TESTING.md  TROUBLESHOOTING.md  WORKSPACE  add_new_links.sh  api_key.enc  api_key.gpg  appveyor.yml  artifact-map.json  bazel-google-cloud-java-3  (+90 more)
google-auth-library-java/oauth2_http/: BUILD.bazel  clirr-ignored-differences.xml  pom.xml
google-auth-library-java/oauth2_http/java/com/google/auth/http/: AuthHttpConstants.java  HttpCredentialsAdapter.java  HttpTransportFactory.java  InternalAuthHttpConstants.java
google-auth-library-java/oauth2_http/java/com/google/auth/mtls/: CertificateSourceUnavailableException.java  ContextAwareMetadataJson.java  DefaultMtlsProviderFactory.java  MtlsHttpTransportFactory.java  MtlsProvider.java  MtlsUtils.java  SecureConnectProvider.java  WorkloadCertificateConfiguration.java  X509Provider.java
google-auth-library-java/oauth2_http/java/com/google/auth/oauth2/: AccessToken.java  ActingParty.java  AgentIdentityUtils.java  AppEngineCredentials.java  AwsCredentialSource.java  AwsCredentials.java  AwsDates.java  AwsRequestSignature.java  AwsRequestSigner.java  AwsSecurityCredentials.java  AwsSecurityCredentialsSupplier.java  CertificateIdentityPoolSubjectTokenSupplier.java  ClientId.java  CloudShellCredentials.java  ComputeEngineCredentials.java  CredentialAccessBoundary.java  CredentialFormatException.java  DefaultCredentialsProvider.java  DefaultPKCEProvider.java  DownscopedCredentials.java  EnvironmentProvider.java  ExecutableHandler.java  ExecutableResponse.java  ExternalAccountAuthorizedUserCredentials.java  ExternalAccountAuthorizedUserCredentials.java.rej  ExternalAccountCredentials.java  ExternalAccountCredentials.java.rej  ExternalAccountMetricsHandler.java  ExternalAccountSupplierContext.java  FileIdentityPoolSubjectTokenSupplier.java  GdchCredentials.java  GoogleAuthException.java  GoogleAuthUtils.java  GoogleCredentials.java  IamUtils.java  IdToken.java  IdTokenCredentials.java  IdTokenProvider.java  IdentityPoolCredentialSource.java  IdentityPoolCredentials.java  (+41 more)
google-auth-library-java/oauth2_http/javatests/com/google/auth/: TestClock.java  TestUtils.java
google-auth-library-java/oauth2_http/javatests/com/google/auth/http/: HttpCredentialsAdapterTest.java
google-auth-library-java/oauth2_http/javatests/com/google/auth/mtls/: MtlsUtilsTest.java  SecureConnectProviderTest.java  WorkloadCertificateConfigurationTest.java  X509ProviderTest.java
google-auth-library-java/oauth2_http/javatests/com/google/auth/oauth2/: AccessTokenTest.java  AgentIdentityUtilsTest.java  AppEngineCredentialsTest.java  AwsCredentialsTest.java  AwsCredentialsTest.java.rej  AwsRequestSignerTest.java  BaseSerializationTest.java  CertificateIdentityPoolSubjectTokenSupplierTest.java  ClientIdTest.java  CloudShellCredentialsTest.java  (+71 more)
google-auth-library-java/oauth2_http/testresources/: agent_spiffe_cert.pem  aws_security_credentials.json  client_secret.json  federated_keys.json  iap_keys.json  legacy_federated_keys.json  mtlsCertAndKey.pem  mtls_context_aware_metadata.json  service_account_keys.json
google-auth-library-java/oauth2_http/testresources/agent/: agent_spiffe_cert.pem  agent_spiffe_key.pem
google-auth-library-java/oauth2_http/testresources/mtls/: certificate_config.json  test_cert.pem  test_key.pem
java-showcase/gapic-showcase-extended/proto/: BUILD.bazel
rules_java_gapic/: BUILD.bazel  java_gapic.bzl
rules_java_gapic/resources/gradle/: client_grpc.gradle.tmpl  client_grpcrest.gradle.tmpl  client_rest.gradle.tmpl  grpc.gradle.tmpl  proto.gradle.tmpl
sdk-platform-java/gax-java/: .gitignore  .repo-metadata.json  BUILD.bazel  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  RESUMABLE_UPLOAD_DESIGN.md  WORKSPACE  dependencies.properties  gax_java.bzl  java.header  license-checks.xml  license-header-javadoc.txt  pom.xml  repositories.bzl  repository_rules.bzl
sdk-platform-java/gax-java/gax/: BUILD.bazel  clirr-ignored-differences.xml  javac.20260715_171737.args  pom.xml
sdk-platform-java/gax-java/gax-bom/: pom.xml
sdk-platform-java/gax-java/gax-grpc/: BUILD.bazel  clirr-ignored-differences.xml  pom.xml
sdk-platform-java/gax-java/gax-grpc/src/test/resources/: README.md
sdk-platform-java/gax-java/gax-httpjson/: BUILD.bazel  pom.xml
sdk-platform-java/gax-java/gax/src/main/resources/: dependencies.properties
sdk-platform-java/hermetic_build/common/tests/resources/misc/: BUILD_additional_protos_in_gapic.bazel  BUILD_comment_common_resources.bazel  BUILD_comment_iam_policy.bazel  BUILD_comment_locations.bazel  BUILD_common_resources.bazel  BUILD_gapic_yaml.bazel  BUILD_grpc.bazel  BUILD_grpc_rest.bazel  BUILD_iam_locations.bazel  BUILD_iam_policy.bazel  BUILD_include_samples_empty.bazel  BUILD_include_samples_false.bazel  BUILD_include_samples_true.bazel  BUILD_locations.bazel  BUILD_no_additional_protos.bazel  BUILD_no_gapic_yaml.bazel  BUILD_no_service_config.bazel  BUILD_no_service_yaml.bazel  BUILD_proto_only.bazel  BUILD_rest.bazel  BUILD_rest_numeric_enums_empty.bazel  BUILD_rest_numeric_enums_false.bazel  BUILD_rest_numeric_enums_true.bazel  BUILD_service_config.bazel  BUILD_service_config_relative_target.bazel  BUILD_service_yaml.bazel  BUILD_service_yaml_absolute_target.bazel  BUILD_target_with_nested_parenthesis.bazel  TESTWORKSPACE
sdk-platform-java/java-showcase/scripts/resources/: BUILD.partial.bazel
sdk-platform-java/test/integration/: BUILD.bazel  iam_grpc_service_config.json  pubsub_v1.yaml
sdk-platform-java/test/integration/apis/kms/v1/: cloudkms_test_mixins_v1.yaml  service.proto
sdk-platform-java/test/integration/goldens/: README.md
(+386726 files in other folders)
