# This file is a partial recovery of the BUILD.bazel file, which was last seen on
# https://github.com/googleapis/sdk-platform-java/commit/d59b87feddce69077c05ef8e44faea8c44f3338b
#
# We keep it here in order to leverage the protoc parameter inference of the hermetic build Docker image,
# which parses BUILD.bazel files from folders with api definitions (e.g. googleapis/googleapis).

java_gapic_library(
    grpc_service_config = "showcase_grpc_service_config.json",
    service_yaml = "showcase_v1beta1.yaml",
    test_deps = [
        ":showcase_java_grpc",
        "@com_google_googleapis//google/cloud/location:location_java_grpc",
        "@com_google_googleapis//google/iam/v1:iam_java_grpc"
    ],
    transport = "grpc+rest",
)

proto_library_with_info(
    deps = [
        "//google/cloud/location:location_proto",
        "//google/iam/v1:iam_policy_proto"
   ],
)

java_gapic_assembly_gradle_pkg(
    include_samples = True,
)
